--- a/Island Escape/Packages/manifest.json
+++ b/Island Escape/Packages/manifest.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
     "com.cysharp.unitask": "https://github.com/Cysharp/UniTask.git?path=src/UniTask/Assets/Plugins/UniTask",
+    "com.github-glitchenzo.nugetforunity": "https://github.com/GlitchEnzo/NuGetForUnity.git?path=/src/NuGetForUnity",
+    "com.unity.addressables": "2.5.0",
     "com.unity.collab-proxy": "2.8.2",
     "com.unity.dedicated-server": "1.4.2",
     "com.unity.ide.rider": "3.0.36",
@@ -15,6 +17,7 @@
     "com.unity.services.deployment": "1.4.1",
     "com.unity.services.multiplayer": "1.1.1",
     "com.unity.test-framework": "1.5.1",
+    "net.tnrd.serializableinterface": "https://github.com/Thundernerd/Unity3D-SerializableInterface.git",
     "com.unity.modules.accessibility": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
