--- a/Island Escape/Packages/manifest.json
+++ b/Island Escape/Packages/manifest.json
@@ -5,6 +5,7 @@
     "com.unity.addressables": "2.6.0",
     "com.unity.collab-proxy": "2.8.2",
     "com.unity.dedicated-server": "1.5.0",
+    "com.unity.feature.2d": "2.0.1",
     "com.unity.ide.rider": "3.0.36",
     "com.unity.ide.visualstudio": "2.0.23",
     "com.unity.inputsystem": "1.14.0",
